--- a/templates/nav.html
+++ b/templates/nav.html
@@ -76,6 +76,15 @@
                 </ul>
             </li>
 
+
+            <li>
+                <a><i class="fa fa-file-o"></i> <span class="nav-label">Zabbix</span><span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li class="asset"> <a href="#">nginx</a></li>
+                </ul>
+            </li>
+
+
             <li>
                 <a><i class="fa fa-inbox"></i> <span class="nav-label">Asset</span><span class="fa arrow"></span></a>
                 <ul class="nav nav-second-level">
