--- a/templates/nav.html
+++ b/templates/nav.html
@@ -74,6 +74,12 @@
                     <li class="asset"> <a href="{% url 'user_add_html' %}">添加用户</a></li>
                 </ul>
             </li>
+            <li>
+                <a><i class="fa fa-inbox"></i> <span class="nav-label">Routing</span><span class="fa arrow"></span></a>
+                <ul class="nav nav-second-level">
+                    <li class="asset"> <a href="{% url 'get_sidebar' %}">查看路由信息</a></li>
+                </ul>
+            </li>
         {% endif %}
         {% if request.user|has_group:'go' %}
             <li>
