--- a/templates/getsidebar.html
+++ b/templates/getsidebar.html
@@ -24,30 +24,39 @@
                 </div>
 
                 <div class="ibox-content">
-                    <form action="＃" method="post" id="checkall">
+                    <form action="{% url 'get_routing_info' %}" method="get" id="checkall">
 
                         <table class="table table-striped table-bordered table-hover " id="editable" name="editable">
-                            <thead>
-                                <tr>
-                                    <th class="text-center">
-                                        <input id="checkall" type="checkbox" class="i-checks" name="checkall" value="checkall" data-editable='false' onclick="check_all('checkall')">
-                                    </th>
-                                    <th class="text-center"> 项目 </th>
-                                    <th class="text-center"> 功能 </th>
-                                    <th class="text-center"> 路由URL </th>
-                                </tr>
-                            </thead>
+{#                            <thead>#}
+{#                                <tr>#}
+{#                                    <th class="text-center">#}
+{#                                        <input id="checkall" type="checkbox" class="i-checks" name="checkall" value="checkall" data-editable='false' onclick="check_all('checkall')">#}
+{#                                    </th>#}
+{#                                    <th class="text-center"> 项目 </th>#}
+{#                                    <th class="text-center"> 功能 </th>#}
+{#                                    <th class="text-center"> 路由URL </th>#}
+{#                                </tr>#}
+{#                            </thead>#}
                             <tbody>
-                            {% for info in sidebar_level %}
-                                <tr class="gradeX">
-                                    <td class="text-center"  data-editable='false'>
-                                        <input name="id" value="{{ info.level_name }},{{ info.url_name }}" type="checkbox" class="i-checks">
-                                    </td>
-                                    <td class="text-center"> <a href="#">{{ info.sidebar_name }}</a></td>
-                                    <td class="text-center"> {{ info.level_name }} </td>
-                                    <td class="text-center"> {{ info.url_name}} </td>
+                                <tr>
+                                    <td class="text-center"> <a href="#">功能</a></td>
+                                    <td class="text-center"> <a href="#">下级内容</a></td>
+                                    <td class="text-center"> <a href="#">路由地址</a></td>
                                 </tr>
-                            {% endfor %}
+                                {% for bar,info in sidebar_dic.items %}
+                                    <td class="text-center">{{ bar }}</td>
+                                        </tr>
+                                            {% for i in info %}
+                                                <tr>
+                                                    <td class="text-center"  data-editable='false'>
+                                                        <input name="routing" value="{{ bar }}:{{ i }}" type="checkbox" class="i-checks">
+                                                    </td>
+                                                    {% for c in i %}
+                                                        <td class="text-center"> {{ c }} </td>
+                                                    {% endfor %}
+                                                </tr>
+                                            {% endfor %}
+                                {% endfor %}
                             </tbody>
                         </table>
                       <input class="btn btn-danger" type="submit"  name="action" value="submit">
