--- a/templates/nav.html
+++ b/templates/nav.html
@@ -21,6 +21,7 @@
                     <li class="user"><a href="{% url 'go_status' %}">服务状态<span class="label pull-right"></span></a></li>
                     <li class="user"><a href="{% url 'crontab_update' %}">crontab更新<span class="label pull-right"></span></a></li>
                     <li class="user"><a href="{% url 'cronjob_list' %}">cron job列表<span class="label pull-right"></span></a></li>
+                    <li class="user"><a href="{% url 'get_consul_html' %}">consul查询<span class="label pull-right"></span></a></li>
                 </ul>
             </li>
              <li>
