--- a/templates/nav.html
+++ b/templates/nav.html
@@ -50,7 +50,7 @@
                 <ul class="nav nav-second-level">
                     <li class="group"><a href="#">查看资产组</a></li>
                     <li class="asset"> <a href="{% url 'asset_list' %}">查看资产</a></li>
-                    <li class="idc"> <a href="#">查看机房</a></li>
+                    <li class="idc"> <a href="{% url 'asset_idc' %}">查看机房</a></li>
                 </ul>
             </li>
             <li>
