--- a/templates/link_css.html
+++ b/templates/link_css.html
@@ -8,4 +8,4 @@
 <link href="/static/css/magnific/magnific-popup.css" rel="stylesheet">
 <link href="/static/css/plugins/fullcalendar/fullcalendar.css" rel="stylesheet">
 <link href="/static/css/plugins/dropzone/basic.css" rel="stylesheet">
-<link href="/static/css/plugins/dropzone/dropzone.css" rel="stylesheet">
+<link href="/static/css/plugins/dropzone/dropzone.css" rel="stfylesheet">
